--- a/foundry.toml
+++ b/foundry.toml
@@ -1,6 +1,5 @@
 [profile.default]
-src = 'src'
-out = 'out'
-libs = ['lib']
-
-# See more config options https://github.com/foundry-rs/foundry/tree/master/config
+optimizer = true
+optimizer_runs = 200
+lib-paths = "node_modules"
+contracts = "contracts"
